CIRC-1223 add test, refactoring